--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
   <h1>Welcome to KunstWerk NodeJS Development Environment</h1>
+  <script src="bundle.js"></script>
 </body>
 </html>
